
2012-10-31  TaeHwan Kim (Bluezery)

        * Don't crash glview even if you failed to create obj.

2012-11-02  ChunEon Park (Hermet)

        * Don't update map uv with image size for proxy object in elm_flip.

2012-11-06  Gustavo Lima (glima)

        * Fix typo on check's theme -- back from disabled state was broken.

2012-11-07  Mikael Sans (xhell)

        * Fix wrong parameter for thumbnail error in elm_icon.

2012-11-12  ChunEon Park (Hermet)

        * Support virtualkeypad, clipbard state shange signals from
		  conformant

2012-11-12  Jaehwan Kim

        * Add elm_toolbar_item_show/bring_in.
          It show or bring a specific item, when the toolbar can be scrolled.

2012-11-12  Michael Bouchaud (yoz)

        * Add missing selected event in elm_index (elm_index_item_selected_set)

2012-11-14  Michael Bouchaud (yoz)

        * Add elm_genlist_nth_item_get
        * Add elm_gengrid_nth_item_get

2012-11-15  Jiyoun Park (jypark)

        * Support indicator service in elm_conformant. elm conformant can manage
          indicator(elm_plug).

2012-11-21  Michael Bouchaud (yoz)

        * update the min size hint on elm_label after a text set

2012-11-22  Michael Bouchaud (yoz)

        * fix elm_flip to show only one face at a time

2012-11-22  ChunEon Park (Hermet)

        * Lets remove contents regardless of the preseve_on_set if naviframe is
        deleted.

2012-11-22  Shilpa Sigh (shilpa.singh@samsung.com)

        * Clear the title contents when naviframe item is deleted.

2012-11-22  Thiep Ha 

        * Fixed entry to enable have_selection only when a text is actually selected.

2012-11-23  ChunEon Park (Hermet)

        * Free the text parts of the naviframe item when item is deleted.

2012-11-26  Daniel Zaoui and Yaakov Goldberg

        * Porting of Elementary to Eo

2012-11-29  ChunEon Park (Hermet)

        * Fix the mapbuf to update it's contents correctly, even if they go
        outside of the buffer